@@ -38,6 +38,8 @@
 <p>2014-10-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pnm.c (ReadPNMImage): Validate PGM, PPM, and PAM header
+MaxValue parameter.  Issue was reported by Hanno Böck.</li>
 <li>coders/pcx.c (ReadPCXImage): Fix for CVE-2014-8355, eliminate
 memory leaks in error paths, and add PCX header logging.  Issue
 was reported by Hanno Böck.</li>
